[gd_scene load_steps=8 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://zene_be.png" type="Texture" id=2]
[ext_resource path="res://zene_ki.png" type="Texture" id=3]
[ext_resource path="res://sfx_be.png" type="Texture" id=4]
[ext_resource path="res://sfx_ki.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "ki",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "be",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "ki",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "be",
"speed": 5.0
} ]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ZeneGomb" type="AnimatedSprite" parent="."]
position = Vector2( 982.342, 41.3523 )
frames = SubResource( 1 )
animation = "be"
__meta__ = {
"_edit_group_": true
}

[node name="Button" type="Button" parent="ZeneGomb"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -32.0
margin_right = -32.0
margin_bottom = -32.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXGomb" type="AnimatedSprite" parent="."]
position = Vector2( 900.631, 42.8373 )
frames = SubResource( 2 )
animation = "be"
__meta__ = {
"_edit_group_": true
}

[node name="Button" type="Button" parent="SFXGomb"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -32.0
margin_right = -32.0
margin_bottom = -32.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ZeneGomb/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="SFXGomb/Button" to="." method="_on_Button_sfx_pressed"]
